# fabricaNUPE_backEnd

./: .coveragerc  .env.dev_backend  .env.dev_frontend  .env.exemplo  .extensions  .flake8  .gitignore  .gitlab-ci.yml  .pdm-python  .pre-commit-config.yaml  Procfile  README.md  db.sqlite3  dev_backend.Dockerfile  dev_backend.env  dev_frontend.Dockerfile  docker-compose-back.yml  docker-compose-db.yml  docker-compose.yml  envsample  manage.py  project.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
NuPe/: README.md  nuxt.config.js  package-lock.json  package.json
NuPe/components/register/: Person.vue
NuPe/components/template/: footerBase.vue  navbar.vue  sidebar.vue
NuPe/layouts/: default.vue
NuPe/pages/: createPerson.vue  createStudent.vue  index.vue  login.vue  registerNewUser.vue
docs/: conf.py  index.rst
docs/_static/: redoc.html
docs/api/: schema.yaml
docs/modules/: commands-core.rst  filters-core.rst  models-account.rst  models-core.rst  models-file.rst  serializers-account.rst  serializers-core.rst  serializers-file.rst  services-file.rst  signals-core.rst  utilities-core.rst
docs/pages/: about.rst  api.rst  code.rst  good_practices.rst  redoc.rst  requirements.rst
documentation/: CodigosYuml.txt
nupe/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
nupe/account/: admin.py  apps.py  router.py
nupe/account/filters/: __init__.py  account.py
nupe/account/migrations/: 0001_add__account.py  0002_account_deleted_by_cascade_alter_account_deleted_and_more.py
nupe/account/models/: __init__.py  account.py
nupe/account/serializers/: __init__.py  account.py
nupe/account/views/: __init__.py  account.py
nupe/core/: __init__.py  admin.py  apps.py  router.py  tests.py
nupe/core/exceptions/: ActionHasNoSerializer.py  InvalidResponsible.py  __init__.py  action_not_implemented.py
nupe/core/filters/: Student.py  __init__.py  attendance.py  course.py  institution.py  location.py  person.py  reason.py  student.py
nupe/core/migrations/: 0001_add__city__state__location.py  0001_add_city_state_location.py  0001_initial.py  0002_add__academic_education__course__grade.py  0002_add__course__grade__academic_education.py  0002_add__institution__campus.py  0002_add_course_grade_academic_education.py  0003_add__academic_education__grade__academic_education_campus.py  0003_add__academic_education_campus__campus__institution__institution_campus.py  0003_add__academic_education_campus__institution__campus.py  0003_add__academic_education_institution_campus__campus__institution__institution_campus.py  0003_add_institution_campus_institutionCampus_academicEducationCampus.py  0004_add__person.py  0004_add_person.py  0005_add__student__responsible.py  0006_add__function__sector.py  0007_add__attendance_reason.py  0007_add__special_need_type__crisis_type__drug_type__attendance_reason.py  0008_add__attendance__account_attendance.py  0009_academiceducation_deleted_by_cascade_and_more.py  0010_alter_person_profile_image.py  0011_team.py  0012_student_team.py  0013_alter_student_team.py
nupe/core/models/: Course.py  Institution.py  Localizacao.py  Location.py  Person.py  Student.py  __init__.py  attendance.py  course.py  institution.py  job.py  location.py  person.py  reason.py  student.py  team.py
nupe/core/serializers/: Person.py  Student.py  __init__.py  attendance.py  course.py  institution.py  job.py  location.py  person.py  reason.py  student.py  team.py  user.py
nupe/core/signals/: Institution.py  Student.py  institution.py
nupe/core/utils/: Regex.py  properties.py  regex.py
nupe/core/views/: CustomHandler404.py  Person.py  Student.py  __init__.py  attendance.py  course.py  custom_handler_404.py  institution.py  job.py  location.py  person.py  reason.py  student.py  team.py  user.py
nupe/file/: __init__.py  admin.py  apps.py  router.py
nupe/tests/: remove_image_files_after_test.py  utils.py
nupe_frontend/: README.md  nuxt.config.js  package-lock.json  package.json
nupe_frontend/components/: FormLogin.vue
nupe_frontend/layouts/: blank.vue  default.vue
nupe_frontend/pages/: SystemPeople.vue  SystemStudents.vue  SystemUsers.vue  cadastroCampus.vue  cadastroInstituicao.vue  campus.vue  create.vue  editarCampus.vue  editarInstituicao.vue  index.vue  listarCampus.vue  listarInstituicao.vue  login.vue
nupe_frontend/plugins/: global.js
nupe_frontend/todo/: index.vue
resources/const/: Messages.py
tests/: conftest.py  remove_image_files_after_test.py
tests/endpoints/: Oauth2.py  Person.py  ProfileImage.py  Student.py  __init__.py  image_upload.py  oauth2.py  person.py  student.py
tests/models/: Course.py  Institution.py  Localizacao.py  Location.py  Person.py  ProfileImage.py  Student.py  __init__.py  course.py  image_upload.py  institution.py  location.py  person.py  student.py
(+148 files in other folders)
