[tool.poetry]
name = "nupe"
version = "0.1.0"
description = "projeto da fabrica de software para o NUPE do IFC - Araquari"
authors = ["\"eduardo\", \"yuri\", \"luis\", \"jorge\", \"kaua\""]

[tool.poetry.dependencies]
python = "^3.6.1"
django = "^3.0.5"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-django = "^3.9.0"

[tool.black]
line-length = 119

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

